adding PRF and PRG->PRF

--- a/objects/Citations/Citations.bib
+++ b/objects/Citations/Citations.bib
@@ -20,6 +20,17 @@
   howpublished="\url{https://ieeexplore.ieee.org/abstract/document/4568378/}"
 }
 
+@inproceedings{goldreich1984construct,
+  title={How to construct Randolli functions},
+  author={Goldreich, Oded and Goldwasser, Shafi and Micali, Silvio},
+  booktitle={Foundations of Computer Science, 1984. 25th Annual Symposium on},
+  pages={464--479},
+  year={1984},
+  organization={IEEE}
+  howpublished="\url{http://www.wisdom.weizmann.ac.il/~oded/X/ggm-jacm.pdf}"
+}
+
+
 @article{haastad1999pseudorandom,
   title={A pseudorandom generator from any one-way function},
   author={H{\aa}stad, Johan and Impagliazzo, Russell and Levin, Leonid A and Luby, Michael},
