fixing typo in bibliography

--- a/objects/Citations/Citations.bib
+++ b/objects/Citations/Citations.bib
@@ -26,7 +26,7 @@
   booktitle={Foundations of Computer Science, 1984. 25th Annual Symposium on},
   pages={464--479},
   year={1984},
-  organization={IEEE}
+  organization={IEEE},
   howpublished="\url{http://www.wisdom.weizmann.ac.il/~oded/X/ggm-jacm.pdf}"
 }
 
