--- a/objects/Citations/Citations.bib
+++ b/objects/Citations/Citations.bib
@@ -75,5 +75,27 @@
   year = {1988},
   doi = {10.1137/0217022},
   publisher={SIAM},
-  howpublished="\url{https://pdfs.semanticscholar.org/7d58/9564998287a942149c4fee931852b22d8997.pdf}"
+  howpublished="\url{https://search.proquest.com/docview/919828131/}"
+}
+
+@Article{feistel1973cryptography,
+  title={Cryptography and computer privacy},
+  author={Feistel, Horst},
+  journal={Scientific american},
+  volume={228},
+  number={5},
+  pages={15--23},
+  year={1973},
+  publisher={JSTOR},
+  howpublished="\url{https://www.jstor.org/stable/24923044}"
+}
+
+@inproceedings{schneier1996unbalanced,
+  title={Unbalanced Feistel networks and block cipher design},
+  author={Schneier, Bruce and Kelsey, John},
+  booktitle={International Workshop on Fast Software Encryption},
+  pages={121--144},
+  year={1996},
+  organization={Springer},
+  howpublished="\url{https://www.schneier.com/academic/paperfiles/paper-unbalanced-feistel.pdf}"
 }
